# strata-solver

./: CMakeLists.txt  Makefile  README.md  Solver.cpp  Solver.hpp  StrataMap.cpp  StrataMap.hpp  main.cpp
include/: Color.hpp  ColorChecker.hpp  Map.hpp  Move.hpp  Solution.hpp  Solver.hpp
src/: Color.cpp  ColorChecker.cpp  Map.cpp  Move.cpp  Solution.cpp  Solver.cpp  main.cpp
